[package]
name = "cuda-actor"
version = "0.1.0"
edition = "2021"
description = "Actor model — mailbox, spawn, supervision trees"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-actor"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }
